*1.0.2* *SVN*

* Rename to capistrano

* Make the generated switchtower.rake file use rake namespaces, and include all default tasks

* Look for config/deploy.rb and stasks file by default


*1.0.1* (February 20th, 2006)

* Fix broken switchtower_invoke function in switchtower.rake (missing require statement)


*1.0.0* (Feburary 18th, 2006)

* Make CVS module's :local value default to "."

* Add "invoke" task for executing one-off commands

* Make port selection smarter for gateway connections

* Add extension mechanism for custom ST operations and third-party task libraries

* Make ST rails rake tasks more configurable

* Add Actor#current_task and simplify Task#servers

* Add Actor#connect! method for working around lazy connection establishing

* Make sure IO::TRUNC is specified for Net::SFTP uploads (#3510)

* Add branch support to CVS [jeremy@hinegardner.org] (#3596)

* Add bazaar-ng SCM module [Damien Merenne]

* Add optional :svn_username and :svn_password variables

* Allow Proc-valued variables to be set more conveniently (set(:foo) { "bar" })

* Add perforce SCM module [Richard McMahon]

* Add bazaar (v1) SCM module [Edd Dumbill] (#3533)

* Fix stftime format string used in CVS module to be Windows-compatible (fixes #3383)

* Add an better error when a task is run and no servers match the required conditions

* Add default spinner and cold_deploy tasks, and spinner_user variable

* Changed restart_via variable to (boolean) use_sudo

* Only chmod when the revisions.log file is first created

* Make UPPERCASE variables work

* Added rails_env variable (defaults to production) for use by tasks that employ the RAILS_ENV environment variable

* Added Actor.default_io_proc

* Set :actor key on SSH channel instances


*0.10.0* (January 2nd, 2006)

* Handle ssh password prompts like "someone's password:"

* Make CLI#echo available as a class method.

* Add CLI#with_echo.

* Make the default password prompt available as a class method.
